--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Abhishek</span><br>DevOps Engineer</h1>
+                    <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Abhishek</span><br>DevOps Engineer</h1>
 
                     <a href="mailto:aniket47.agcs@gmail.com" class="button">Contact</a>
                 </div>
