--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
                 <h2 class="section-title">Experience</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img">
+                    <a href="https://www.tcs.com/" class="work__img">
                         <img src="assets/img/work1.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://www.hcltech.com/" class="work__img">
                         <img src="assets/img/work2.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://www.cisco.com/site/us/en/index.html" class="work__img">
                         <img src="assets/img/work3.jpg" alt="">
                     </a>
                 </div>
