--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <a href="https://www.instagram.com/abhishek_001101/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
-            <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
+            <p class="footer__copy">&#169; Abhishek Sharma. All rigths reserved</p>
         </footer>
 
 
