--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Abhishek Sharma</p>
+            <p class="footer__title">Abhishek Portfolio</p>
             <div class="footer__social">
                 <a href="https://m.facebook.com/profile.php?id=100009769840886&__n=K" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/abhishek_001101/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
