--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="footer__social">
                 <a href="https://m.facebook.com/profile.php?id=100009769840886&__n=K" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/abhishek_001101/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://twitter.com/Abhishek001101" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
             <p class="footer__copy">&#169; Abhishek Sharma. All rigths reserved</p>
         </footer>
