--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/abhishek-sharma-498b761a3" class="home__social-icon" target="_blank"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/AbhishekSharma011" class="home__social-icon" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="#" class="home__social-icon" target="_blank"><i class='bx bxl-behance'></i></a>
+                    <a href="https://www.behance.net/abhisheksharma836" class="home__social-icon" target="_blank"><i class='bx bxl-behance'></i></a>
                 </div>
                 
 
