--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="https://formspree.io/f/mvgonwrn" class="contact__form" method="POST">
+                    <form action="https://formspree.io/f/mvgonwrn" method="POST">
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
