--- a/index.html
+++ b/index.html
@@ -200,19 +200,21 @@
             </section>
 
             <!--===== CONTACT =====-->
+             <form action="https://formspree.io/f/mvgonwrn" method="POST">
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
                     <form action="https://formspree.io/f/mvgonwrn" method="POST">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="SEND" class="contact__button button">
+                        <input type="text" name="name" placeholder="Name" required>
+                        <input type="email" name="email" placeholder="Email" required>
+                        <textarea name="message" placeholder="" required></textarea>
+                        <button type="submit">Send</button>
                     </form>
                 </div>
             </section>
         </main>
+    </form>
 
         <!--===== FOOTER =====-->
         <footer class="footer">
