--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Abhishek</span><br>DevOps Engineer</h1>
 
-                    <a href="mailto:aniket47.agcs@gmail.com" class="button">Contact</a>
+                    <a href="assets/img/AbhishekResume.pdf" class="button">VIEW CV</a>
                 </div>
 
                 <div class="home__social">
