--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I am Abhishek Sharma</h2>
-                        <p class="about__text">I am a passionate DevOps Engineer with two plus year of experience in automating processes, building CI/CD pipelines, and managing cloud infrastructure. My goal is to bridge the gap between development and operations to deliver efficient, scalable systems. Let's build something amazing together!</p>           
+                        <p class="about__text">I am a passionate DevOps Engineer with two plus year of experience in automating processes, building CI/CD pipelines, and managing cloud infrastructure. I am AWS certified Cloud Solution Architect and My goal is to bridge the gap between development and operations to deliver efficient, scalable systems. Let's build something amazing together!</p>           
                     </div>                                   
                 </div>
             </section>
